--- a/Terapia-de-Pareja-Online.css
+++ b/Terapia-de-Pareja-Online.css
@@ -245,9 +245,7 @@
 }
 
 .u-section-5 .u-text-2 {
-  margin-left: 0;
-  margin-bottom: 0;
-  margin-top: 20px;
+  margin: 18px 0 0;
 }
 
 .u-section-5 .u-btn-1 {
@@ -259,7 +257,7 @@
   height: 42px;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   font-weight: 700;
-  margin: 20px auto 0;
+  margin: 22px auto 0;
 }
 
 .u-section-5 .u-list-item-2 {
@@ -289,9 +287,7 @@
 }
 
 .u-section-5 .u-text-4 {
-  margin-left: 0;
-  margin-bottom: 0;
-  margin-top: 20px;
+  margin: 18px 0 0;
 }
 
 .u-section-5 .u-btn-2 {
@@ -303,7 +299,7 @@
   height: 42px;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   font-weight: 700;
-  margin: 20px auto 0;
+  margin: 22px auto 0;
 }
 
 .u-section-5 .u-list-item-3 {
@@ -333,9 +329,7 @@
 }
 
 .u-section-5 .u-text-6 {
-  margin-left: 0;
-  margin-bottom: 0;
-  margin-top: 20px;
+  margin: 18px 0 0;
 }
 
 .u-section-5 .u-btn-3 {
@@ -347,7 +341,7 @@
   height: 42px;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   font-weight: 700;
-  margin: 20px auto 0;
+  margin: 22px auto 0;
 }
 
 @media (max-width: 1199px) {
