--- a/Contacto.css
+++ b/Contacto.css
@@ -1,3 +1,278 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 400px;
+  min-height: 894px;
+}
+
+.u-section-1 .u-layout-wrap-1 {
+  margin-top: 60px;
+  margin-bottom: 58px;
+}
+
+.u-section-1 .u-layout-cell-1 {
+  min-height: 772px;
+}
+
+.u-section-1 .u-container-layout-1 {
+  padding: 30px 30px 20px;
+}
+
+.u-section-1 .u-text-1 {
+  text-transform: uppercase;
+  background-image: none;
+  font-weight: 700;
+  font-size: 3rem;
+  margin: 0;
+}
+
+.u-section-1 .u-image-1 {
+  width: 429px;
+  height: 630px;
+  margin: 3px 37px 0 auto;
+}
+
+.u-section-1 .u-layout-cell-2 {
+  min-height: 772px;
+}
+
+.u-section-1 .u-container-layout-2 {
+  padding: 20px 13px;
+}
+
+.u-section-1 .u-text-2 {
+  font-weight: 400;
+  font-size: 1.875rem;
+  margin: 86px auto 0 0;
+}
+
+.u-section-1 .u-text-3 {
+  font-weight: 400;
+  margin: 20px 34px 0 0;
+}
+
+.u-section-1 .u-icon-1 {
+  width: 33px;
+  height: 33px;
+  margin: 0 511px 0 0;
+  padding: 0;
+}
+
+.u-section-1 .u-text-4 {
+  font-weight: 700;
+  font-size: 1.5rem;
+  margin: -29px 31px 0;
+}
+
+.u-section-1 .u-text-5 {
+  font-size: 3rem;
+  font-weight: 700;
+  margin: 59px 0 0;
+}
+
+.u-section-1 .u-icon-2 {
+  width: 106px;
+  height: 106px;
+  margin: 67px auto 0;
+}
+
+@media (max-width: 1199px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 685px;
+  }
+
+  .u-section-1 .u-layout-cell-1 {
+    min-height: 860px;
+  }
+
+  .u-section-1 .u-image-1 {
+    width: 410px;
+    height: 602px;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-layout-cell-2 {
+    min-height: 637px;
+  }
+
+  .u-section-1 .u-text-2 {
+    margin-top: 91px;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-icon-1 {
+    margin-right: 411px;
+  }
+
+  .u-section-1 .u-text-4 {
+    width: auto;
+    margin-top: -28px;
+    margin-right: 0;
+    margin-left: 71px;
+  }
+
+  .u-section-1 .u-text-5 {
+    width: auto;
+    margin-top: 33px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 714px;
+  }
+
+  .u-section-1 .u-layout-cell-1 {
+    min-height: 678px;
+  }
+
+  .u-section-1 .u-container-layout-1 {
+    padding-top: 20px;
+  }
+
+  .u-section-1 .u-image-1 {
+    width: 300px;
+    height: 440px;
+  }
+
+  .u-section-1 .u-layout-cell-2 {
+    min-height: 100px;
+  }
+
+  .u-section-1 .u-text-2 {
+    margin-top: 0;
+    font-size: 1.5rem;
+  }
+
+  .u-section-1 .u-icon-1 {
+    margin-right: 301px;
+    margin-left: 5px;
+  }
+
+  .u-section-1 .u-text-4 {
+    margin-left: 58px;
+  }
+
+  .u-section-1 .u-text-5 {
+    font-size: 2.25rem;
+    margin-top: 81px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 1066px;
+  }
+
+  .u-section-1 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-1 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-1 .u-icon-1 {
+    margin-top: 145px;
+  }
+
+  .u-section-1 .u-text-4 {
+    margin-top: -29px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-1 .u-layout-cell-1 {
+    min-height: 652px;
+  }
+
+  .u-section-1 .u-text-1 {
+    font-size: 1.5rem;
+  }
+
+  .u-section-1 .u-image-1 {
+    margin-top: -322px;
+  }
+
+  .u-section-1 .u-icon-1 {
+    margin-right: 287px;
+  }
+
+  .u-section-1 .u-text-4 {
+    margin-top: 20px;
+    margin-left: 0;
+  }
+} .u-section-2 {
+  background-image: none;
+}
+
+.u-section-2 .u-sheet-1 {
+  min-height: 392px;
+}
+
+.u-section-2 .u-text-1 {
+  margin: 100px auto 0;
+}
+
+.u-section-2 .u-social-icons-1 {
+  height: 79px;
+  min-height: 16px;
+  width: 437px;
+  min-width: 120px;
+  margin: 17px auto 60px;
+}
+
+.u-section-2 .u-icon-1 {
+  color: rgb(59, 89, 152) !important;
+}
+
+.u-section-2 .u-icon-2 {
+  height: 100%;
+  color: rgb(197, 54, 164) !important;
+}
+
+.u-section-2 .u-icon-3 {
+  height: 100%;
+  color: rgb(0, 122, 185) !important;
+}
+
+.u-section-2 .u-icon-4 {
+  height: 48px;
+}
+
+.u-section-2 .u-icon-5 {
+  height: 100%;
+  color: rgb(0, 230, 118) !important;
+} .u-section-3 {
+  background-image: none;
+}
+
+.u-section-3 .u-sheet-1 {
+  min-height: 71px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 149px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 160px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 262px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 224px;
+  }
 }
