--- a/Contacto.css
+++ b/Contacto.css
@@ -34,43 +34,36 @@
 }
 
 .u-section-1 .u-container-layout-2 {
-  padding: 20px 13px;
+  padding: 0;
 }
 
 .u-section-1 .u-text-2 {
-  font-weight: 400;
-  font-size: 1.875rem;
-  margin: 86px auto 0 0;
+  margin: 0 13px;
 }
 
 .u-section-1 .u-text-3 {
   font-weight: 400;
-  margin: 20px 34px 0 0;
+  font-size: 1.875rem;
+  margin: 34px 20px 0;
 }
 
 .u-section-1 .u-icon-1 {
   width: 33px;
   height: 33px;
-  margin: 0 511px 0 0;
+  margin: 0 auto;
   padding: 0;
 }
 
 .u-section-1 .u-text-4 {
-  font-weight: 700;
-  font-size: 1.5rem;
-  margin: -29px 31px 0;
-}
-
-.u-section-1 .u-text-5 {
   font-size: 3rem;
   font-weight: 700;
-  margin: 59px 0 0;
+  margin: 44px 13px 0;
 }
 
 .u-section-1 .u-icon-2 {
   width: 106px;
   height: 106px;
-  margin: 67px auto 0;
+  margin: 53px auto 0;
 }
 
 @media (max-width: 1199px) {
@@ -93,27 +86,27 @@
   }
 
   .u-section-1 .u-text-2 {
-    margin-top: 91px;
-  }
-
-  .u-section-1 .u-text-3 {
+    margin-left: 0;
     margin-right: 0;
   }
 
+  .u-section-1 .u-text-3 {
+    margin-top: 91px;
+  }
+
   .u-section-1 .u-icon-1 {
-    margin-right: 411px;
+    margin-right: 417px;
   }
 
   .u-section-1 .u-text-4 {
     width: auto;
-    margin-top: -28px;
+    margin-top: 5px;
+    margin-left: 0;
     margin-right: 0;
-    margin-left: 71px;
   }
 
-  .u-section-1 .u-text-5 {
-    width: auto;
-    margin-top: 33px;
+  .u-section-1 .u-icon-2 {
+    margin-top: 272px;
   }
 }
 
@@ -139,23 +132,19 @@
     min-height: 100px;
   }
 
-  .u-section-1 .u-text-2 {
-    margin-top: 0;
+  .u-section-1 .u-text-3 {
     font-size: 1.5rem;
+    margin-top: 0;
   }
 
   .u-section-1 .u-icon-1 {
-    margin-right: 301px;
+    margin-right: auto;
     margin-left: 5px;
   }
 
   .u-section-1 .u-text-4 {
-    margin-left: 58px;
-  }
-
-  .u-section-1 .u-text-5 {
     font-size: 2.25rem;
-    margin-top: 81px;
+    margin-top: 53px;
   }
 }
 
@@ -169,17 +158,12 @@
     padding-right: 10px;
   }
 
-  .u-section-1 .u-container-layout-2 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
   .u-section-1 .u-icon-1 {
-    margin-top: 145px;
+    margin-top: 190px;
   }
 
   .u-section-1 .u-text-4 {
-    margin-top: -29px;
+    margin-top: 52px;
   }
 }
 
@@ -196,13 +180,8 @@
     margin-top: -322px;
   }
 
-  .u-section-1 .u-icon-1 {
-    margin-right: 287px;
-  }
-
   .u-section-1 .u-text-4 {
-    margin-top: 20px;
-    margin-left: 0;
+    margin-top: 101px;
   }
 } .u-section-2 {
   background-image: none;
