--- a/Contacto.css
+++ b/Contacto.css
@@ -19,7 +19,7 @@
   text-transform: uppercase;
   background-image: none;
   font-weight: 700;
-  font-size: 3rem;
+  font-size: 1.875rem;
   margin: 0;
 }
 
@@ -30,7 +30,7 @@
 }
 
 .u-section-1 .u-layout-cell-2 {
-  min-height: 772px;
+  min-height: 848px;
 }
 
 .u-section-1 .u-container-layout-2 {
@@ -38,32 +38,45 @@
 }
 
 .u-section-1 .u-text-2 {
-  margin: 0 13px;
+  font-size: 0.625rem;
+  margin: 39px 13px 0;
 }
 
 .u-section-1 .u-text-3 {
+  font-size: 1.875rem;
+  margin: 104px 6px 0 20px;
+}
+
+.u-section-1 .u-text-4 {
+  font-size: 1.875rem;
+  margin: 60px 13px 0;
+}
+
+.u-section-1 .u-text-5 {
   font-weight: 400;
   font-size: 1.875rem;
-  margin: 34px 20px 0;
+  margin: 1px 20px 0;
 }
 
 .u-section-1 .u-icon-1 {
   width: 33px;
   height: 33px;
-  margin: 0 auto;
+  margin: 0 auto 0 256px;
   padding: 0;
 }
 
-.u-section-1 .u-text-4 {
+.u-section-1 .u-text-6 {
   font-size: 3rem;
   font-weight: 700;
-  margin: 44px 13px 0;
+  margin: -16px 13px 0;
 }
 
 .u-section-1 .u-icon-2 {
   width: 106px;
   height: 106px;
-  margin: 53px auto 0;
+  background-image: none;
+  margin: 44px auto 0;
+  padding: 21px;
 }
 
 @media (max-width: 1199px) {
@@ -82,7 +95,7 @@
   }
 
   .u-section-1 .u-layout-cell-2 {
-    min-height: 637px;
+    min-height: 699px;
   }
 
   .u-section-1 .u-text-2 {
@@ -91,14 +104,27 @@
   }
 
   .u-section-1 .u-text-3 {
+    margin-top: 26px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-text-4 {
+    margin-top: 130px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-text-5 {
     margin-top: 91px;
   }
 
   .u-section-1 .u-icon-1 {
     margin-right: 417px;
+    margin-left: 211px;
   }
 
-  .u-section-1 .u-text-4 {
+  .u-section-1 .u-text-6 {
     width: auto;
     margin-top: 5px;
     margin-left: 0;
@@ -132,7 +158,19 @@
     min-height: 100px;
   }
 
+  .u-section-1 .u-text-2 {
+    margin-top: 72px;
+  }
+
   .u-section-1 .u-text-3 {
+    margin-top: -29px;
+  }
+
+  .u-section-1 .u-text-4 {
+    margin-top: 152px;
+  }
+
+  .u-section-1 .u-text-5 {
     font-size: 1.5rem;
     margin-top: 0;
   }
@@ -142,7 +180,7 @@
     margin-left: 5px;
   }
 
-  .u-section-1 .u-text-4 {
+  .u-section-1 .u-text-6 {
     font-size: 2.25rem;
     margin-top: 53px;
   }
@@ -158,11 +196,23 @@
     padding-right: 10px;
   }
 
+  .u-section-1 .u-text-2 {
+    margin-top: 39px;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-top: 104px;
+  }
+
+  .u-section-1 .u-text-4 {
+    margin-top: 60px;
+  }
+
   .u-section-1 .u-icon-1 {
     margin-top: 190px;
   }
 
-  .u-section-1 .u-text-4 {
+  .u-section-1 .u-text-6 {
     margin-top: 52px;
   }
 }
@@ -180,7 +230,20 @@
     margin-top: -322px;
   }
 
+  .u-section-1 .u-text-2 {
+    margin-top: 72px;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-top: -40px;
+  }
+
   .u-section-1 .u-text-4 {
+    font-size: 1.5rem;
+    margin-top: 163px;
+  }
+
+  .u-section-1 .u-text-6 {
     margin-top: 101px;
   }
 } .u-section-2 {
