--- a/Terapia-de-pareja-near-me.css
+++ b/Terapia-de-pareja-near-me.css
@@ -22,13 +22,13 @@
 }
 
 .u-section-1 .u-btn-1 {
-  letter-spacing: 1px;
   font-weight: 700;
   text-transform: uppercase;
-  font-size: 1.125rem;
-  background-image: none;
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  font-size: 1.25rem;
+  letter-spacing: 1px;
+  box-shadow: 2px -2px 8px 0px rgba(128,128,128,1);
   margin: 27px auto 60px 0;
+  padding: 20px;
 }
 
 @media (max-width: 1199px) {
@@ -42,6 +42,12 @@
 
   .u-section-1 .u-text-2 {
     margin-right: 192px;
+  }
+
+  .u-section-1 .u-btn-1 {
+    border-style: none;
+    padding-right: 31px;
+    padding-left: 30px;
   }
 }
 
@@ -181,12 +187,12 @@
 
 .u-section-4 .u-text-1 {
   font-weight: 700;
-  margin: 31px 38px 0 63px;
+  margin: 35px 51px 0;
 }
 
 .u-section-4 .u-text-2 {
   font-size: 1.875rem;
-  margin: 31px 0 27px;
+  margin: 0 0 54px;
 }
 
 @media (max-width: 1199px) {
@@ -222,7 +228,7 @@
 
 .u-section-5 .u-text-1 {
   font-weight: 700;
-  margin: 30px auto;
+  margin: 28px auto 32px;
 } .u-section-6 {
   background-image: none;
 }
@@ -566,56 +572,80 @@
 }
 
 .u-section-9 .u-sheet-1 {
-  min-height: 760px;
+  min-height: 246px;
 }
 
-.u-section-9 .u-video-1 {
-  width: 533px;
-  height: 740px;
-  margin: 7px auto 13px 285px;
+.u-section-9 .u-text-1 {
+  font-weight: 700;
+  margin: 45px 38px;
 }
 
 @media (max-width: 1199px) {
-  .u-section-9 .u-sheet-1 {
-    min-height: 806px;
-  }
-
-  .u-section-9 .u-video-1 {
-    margin-top: 52px;
-    margin-left: auto;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-section-9 .u-sheet-1 {
-    min-height: 400px;
-  }
-}
-
-@media (max-width: 767px) {
-  .u-section-9 .u-sheet-1 {
-    min-height: 350px;
+  .u-section-9 .u-text-1 {
+    width: auto;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-9 .u-sheet-1 {
-    min-height: 220px;
-  }
-
-  .u-section-9 .u-video-1 {
-    width: 340px;
-    height: 472px;
+  .u-section-9 .u-text-1 {
+    margin-left: auto;
+    margin-right: auto;
   }
 } .u-section-10 {
   background-image: none;
 }
 
 .u-section-10 .u-sheet-1 {
+  min-height: 760px;
+}
+
+.u-section-10 .u-video-1 {
+  width: 533px;
+  height: 740px;
+  margin: 7px auto 13px 283px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-10 .u-sheet-1 {
+    min-height: 806px;
+  }
+
+  .u-section-10 .u-video-1 {
+    margin-top: 52px;
+    margin-left: auto;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-10 .u-sheet-1 {
+    min-height: 400px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-10 .u-sheet-1 {
+    min-height: 350px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-10 .u-sheet-1 {
+    min-height: 220px;
+  }
+
+  .u-section-10 .u-video-1 {
+    width: 340px;
+    height: 472px;
+  }
+} .u-section-11 {
+  background-image: none;
+}
+
+.u-section-11 .u-sheet-1 {
   min-height: 1060px;
 }
 
-.u-section-10 .u-text-1 {
+.u-section-11 .u-text-1 {
   --animation-custom_in-translate_x: -300px;
   --animation-custom_in-translate_y: 0px;
   --animation-custom_in-opacity: 0;
@@ -625,19 +655,19 @@
   margin: 30px auto 0;
 }
 
-.u-section-10 .u-list-1 {
+.u-section-11 .u-list-1 {
   grid-template-rows: auto;
   margin-top: 52px;
   margin-bottom: 30px;
 }
 
-.u-section-10 .u-repeater-1 {
+.u-section-11 .u-repeater-1 {
   grid-template-columns: calc(33.3333% - 13.3333px) calc(33.3333% - 13.3333px) calc(33.3333% - 13.3333px);
   min-height: 869px;
   grid-gap: 20px 20px;
 }
 
-.u-section-10 .u-image-1 {
+.u-section-11 .u-image-1 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url("images/5fa53788d9960.jpeg");
   background-position: 50% 50%;
   --animation-custom_in-translate_x: 0px;
@@ -647,28 +677,28 @@
   --animation-custom_in-scale: 0.3;
 }
 
-.u-section-10 .u-container-layout-1 {
+.u-section-11 .u-container-layout-1 {
   padding: 0 0 30px;
 }
 
-.u-section-10 .u-group-1 {
+.u-section-11 .u-group-1 {
   min-height: 112px;
   margin-top: 313px;
   margin-bottom: -30px;
   height: auto;
 }
 
-.u-section-10 .u-container-layout-2 {
+.u-section-11 .u-container-layout-2 {
   padding: 20px 30px;
 }
 
-.u-section-10 .u-text-2 {
+.u-section-11 .u-text-2 {
   font-size: 1.625rem;
   font-weight: normal;
   margin: 5px 0 0;
 }
 
-.u-section-10 .u-image-2 {
+.u-section-11 .u-image-2 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url("images/4f23824e-5d48-45ec-aab1-c26bff86fbdf_16-9-aspect-ratio_default_0.jpg");
   background-position: 50% 50%;
   --animation-custom_in-translate_x: 0px;
@@ -678,27 +708,27 @@
   --animation-custom_in-scale: 0.3;
 }
 
-.u-section-10 .u-container-layout-3 {
+.u-section-11 .u-container-layout-3 {
   padding: 0 0 30px;
 }
 
-.u-section-10 .u-group-2 {
+.u-section-11 .u-group-2 {
   min-height: 112px;
   margin-top: 313px;
   margin-bottom: -30px;
   height: auto;
 }
 
-.u-section-10 .u-container-layout-4 {
+.u-section-11 .u-container-layout-4 {
   padding: 20px 30px;
 }
 
-.u-section-10 .u-text-3 {
+.u-section-11 .u-text-3 {
   font-size: 1.625rem;
   margin: 5px 0 0;
 }
 
-.u-section-10 .u-image-3 {
+.u-section-11 .u-image-3 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url("images/infi.webp");
   background-position: 50% 50%;
   --animation-custom_in-translate_x: 0px;
@@ -708,11 +738,11 @@
   --animation-custom_in-scale: 0.3;
 }
 
-.u-section-10 .u-container-layout-5 {
+.u-section-11 .u-container-layout-5 {
   padding: 0 0 30px;
 }
 
-.u-section-10 .u-group-3 {
+.u-section-11 .u-group-3 {
   min-height: 112px;
   margin-top: 313px;
   margin-bottom: -30px;
@@ -720,16 +750,16 @@
   box-shadow: 2px 2px 8px 0px rgba(128,128,128,1);
 }
 
-.u-section-10 .u-container-layout-6 {
+.u-section-11 .u-container-layout-6 {
   padding: 20px 30px;
 }
 
-.u-section-10 .u-text-4 {
+.u-section-11 .u-text-4 {
   font-size: 1.625rem;
   margin: 5px 0 0;
 }
 
-.u-section-10 .u-image-4 {
+.u-section-11 .u-image-4 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url("images/Ausencia-de-deseo-sexual.jpg");
   background-position: 50% 50%;
   --animation-custom_in-translate_x: 0px;
@@ -739,27 +769,27 @@
   --animation-custom_in-scale: 0.3;
 }
 
-.u-section-10 .u-container-layout-7 {
+.u-section-11 .u-container-layout-7 {
   padding: 0 0 30px;
 }
 
-.u-section-10 .u-group-4 {
+.u-section-11 .u-group-4 {
   min-height: 112px;
   margin-top: 313px;
   margin-bottom: -30px;
   height: auto;
 }
 
-.u-section-10 .u-container-layout-8 {
+.u-section-11 .u-container-layout-8 {
   padding: 20px 30px;
 }
 
-.u-section-10 .u-text-5 {
+.u-section-11 .u-text-5 {
   font-size: 1.625rem;
   margin: 5px 0 0;
 }
 
-.u-section-10 .u-image-5 {
+.u-section-11 .u-image-5 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url("images/1480002025_079453_1480011809_sumario_normal.jpg");
   background-position: 50% 50%;
   --animation-custom_in-translate_x: 0px;
@@ -769,27 +799,27 @@
   --animation-custom_in-scale: 0.3;
 }
 
-.u-section-10 .u-container-layout-9 {
+.u-section-11 .u-container-layout-9 {
   padding: 0 0 30px;
 }
 
-.u-section-10 .u-group-5 {
+.u-section-11 .u-group-5 {
   min-height: 112px;
   margin-top: 313px;
   margin-bottom: -30px;
   height: auto;
 }
 
-.u-section-10 .u-container-layout-10 {
+.u-section-11 .u-container-layout-10 {
   padding: 20px 30px;
 }
 
-.u-section-10 .u-text-6 {
+.u-section-11 .u-text-6 {
   font-size: 1.625rem;
   margin: 5px 0 0;
 }
 
-.u-section-10 .u-image-6 {
+.u-section-11 .u-image-6 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url("images/pareja-comunicacion-asertiva.jpg");
   background-position: 50% 50%;
   --animation-custom_in-translate_x: 0px;
@@ -799,314 +829,256 @@
   --animation-custom_in-scale: 0.3;
 }
 
-.u-section-10 .u-container-layout-11 {
+.u-section-11 .u-container-layout-11 {
   padding: 0 0 30px;
 }
 
-.u-section-10 .u-group-6 {
+.u-section-11 .u-group-6 {
   min-height: 112px;
   margin-top: 313px;
   margin-bottom: -30px;
   height: auto;
 }
 
-.u-section-10 .u-container-layout-12 {
+.u-section-11 .u-container-layout-12 {
   padding: 20px 30px;
 }
 
-.u-section-10 .u-text-7 {
+.u-section-11 .u-text-7 {
   font-size: 1.625rem;
   margin: 5px 0 0;
 }
 
 @media (max-width: 1199px) {
-  .u-section-10 .u-repeater-1 {
+  .u-section-11 .u-repeater-1 {
     grid-template-columns: repeat(3, calc(33.333333333333336% - 13.3333px));
     min-height: 715px;
   }
 
-  .u-section-10 .u-group-1 {
+  .u-section-11 .u-group-1 {
     height: auto;
   }
 
-  .u-section-10 .u-group-2 {
+  .u-section-11 .u-group-2 {
     height: auto;
   }
 
-  .u-section-10 .u-group-3 {
+  .u-section-11 .u-group-3 {
     height: auto;
   }
 
-  .u-section-10 .u-group-4 {
+  .u-section-11 .u-group-4 {
     height: auto;
   }
 
-  .u-section-10 .u-group-5 {
+  .u-section-11 .u-group-5 {
     height: auto;
   }
 
-  .u-section-10 .u-group-6 {
+  .u-section-11 .u-group-6 {
     height: auto;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-10 .u-text-1 {
+  .u-section-11 .u-text-1 {
     width: 720px;
   }
 
-  .u-section-10 .u-repeater-1 {
+  .u-section-11 .u-repeater-1 {
     grid-template-columns: repeat(2, calc(50% - 9.999975px));
     min-height: 1256px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-10 .u-text-1 {
+  .u-section-11 .u-text-1 {
     width: 540px;
   }
 
-  .u-section-10 .u-repeater-1 {
+  .u-section-11 .u-repeater-1 {
     grid-template-columns: 100%;
   }
 
-  .u-section-10 .u-container-layout-2 {
+  .u-section-11 .u-container-layout-2 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-10 .u-container-layout-4 {
+  .u-section-11 .u-container-layout-4 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-10 .u-container-layout-6 {
+  .u-section-11 .u-container-layout-6 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-10 .u-container-layout-8 {
+  .u-section-11 .u-container-layout-8 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-10 .u-container-layout-10 {
+  .u-section-11 .u-container-layout-10 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-10 .u-container-layout-12 {
+  .u-section-11 .u-container-layout-12 {
     padding-left: 10px;
     padding-right: 10px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-10 .u-text-1 {
-    width: 340px;
-  }
-}.u-section-11 .u-sheet-1 {
-  min-height: 559px;
-}
-
-.u-section-11 .u-text-1 {
-  margin: 30px 76px 0;
-}
-
-.u-section-11 .u-gallery-1 {
-  width: 568px;
-  height: 400px;
-  grid-gap: 10px 10px;
-  margin: 21px auto;
-}
-
-.u-section-11 .u-carousel-item-1 {
-  margin-right: 0;
-}
-
-.u-section-11 .u-over-slide-1 {
-  min-height: 100px;
-  padding: 10px;
-}
-
-.u-section-11 .u-carousel-item-2 {
-  margin-right: 0;
-}
-
-.u-section-11 .u-over-slide-2 {
-  min-height: 100px;
-  padding: 10px;
-}
-
-.u-section-11 .u-carousel-item-3 {
-  margin-right: 0;
-}
-
-.u-section-11 .u-over-slide-3 {
-  min-height: 100px;
-  padding: 10px;
-}
-
-.u-section-11 .u-carousel-thumbnails-1 {
-  padding-top: 10px;
-}
-
-.u-section-11 .u-carousel-thumbnail-1 {
-  width: 100px;
-  height: 100px;
-}
-
-.u-section-11 .u-carousel-thumbnail-2 {
-  width: 100px;
-  height: 100px;
-}
-
-.u-section-11 .u-carousel-thumbnail-3 {
-  width: 100px;
-  height: 100px;
-}
-
-.u-section-11 .u-carousel-control-1 {
-  position: absolute;
-  left: 10px;
-  width: 40px;
-  height: 40px;
-}
-
-.u-section-11 .u-carousel-control-2 {
-  position: absolute;
-  right: 10px;
-  width: 40px;
-  height: 40px;
-}
-
-@media (max-width: 1199px) {
-  .u-section-11 .u-sheet-1 {
-    min-height: 584px;
-  }
-
   .u-section-11 .u-text-1 {
-    width: auto;
-    margin-top: 25px;
-    margin-left: 0;
-    margin-right: 0;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-section-11 .u-sheet-1 {
-    min-height: 451px;
-  }
-}
-
-@media (max-width: 767px) {
-  .u-section-11 .u-sheet-1 {
-    min-height: 958px;
-  }
-
-  .u-section-11 .u-gallery-1 {
-    width: 540px;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-11 .u-sheet-1 {
-    min-height: 676px;
-  }
-
-  .u-section-11 .u-gallery-1 {
     width: 340px;
   }
-} .u-section-12 {
-  background-image: none;
-}
-
-.u-section-12 .u-sheet-1 {
-  min-height: 765px;
+}.u-section-12 .u-sheet-1 {
+  min-height: 138px;
 }
 
 .u-section-12 .u-text-1 {
-  font-size: 1.875rem;
-  margin: 30px 0 0;
-}
-
-.u-section-12 .u-text-2 {
-  font-size: 1.875rem;
-  background-image: none;
-  margin: 40px auto 0 0;
-}
-
-.u-section-12 .u-btn-1 {
-  letter-spacing: 1px;
   font-weight: 700;
-  text-transform: uppercase;
-  font-size: 1.125rem;
-  background-image: none;
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 23px auto 30px;
+  font-style: italic;
+  margin: 30px 76px;
 }
 
 @media (max-width: 1199px) {
-  .u-section-12 .u-sheet-1 {
-    min-height: 933px;
-  }
-
   .u-section-12 .u-text-1 {
     width: auto;
-    margin-top: 53px;
-  }
-
-  .u-section-12 .u-btn-1 {
-    border-style: none;
-    margin-top: 51px;
-    margin-bottom: 53px;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-12 .u-sheet-1 {
-    min-height: 2173px;
+    margin-left: 0;
+    margin-right: 0;
   }
 } .u-section-13 {
   background-image: none;
 }
 
 .u-section-13 .u-sheet-1 {
+  min-height: 769px;
+}
+
+.u-section-13 .u-text-1 {
+  font-size: 1.875rem;
+  margin: 33px 0 0;
+}
+
+.u-section-13 .u-text-2 {
+  font-size: 1.875rem;
+  background-image: none;
+  margin: 38px auto 0 0;
+}
+
+.u-section-13 .u-btn-1 {
+  letter-spacing: 1px;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 1.25rem;
+  box-shadow: 2px -2px 8px 0px rgba(128,128,128,1);
+  background-image: none;
+  margin: 25px auto 45px;
+  padding: 20px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-13 .u-sheet-1 {
+    min-height: 933px;
+  }
+
+  .u-section-13 .u-text-1 {
+    width: auto;
+    margin-top: 53px;
+  }
+
+  .u-section-13 .u-btn-1 {
+    border-style: none;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-13 .u-sheet-1 {
+    min-height: 2173px;
+  }
+} .u-section-14 {
+  background-image: none;
+}
+
+.u-section-14 .u-sheet-1 {
+  min-height: 967px;
+}
+
+.u-section-14 .u-text-1 {
+  font-size: 1.875rem;
+  margin: 29px 0 0;
+}
+
+.u-section-14 .u-btn-1 {
+  letter-spacing: 1px;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 1.25rem;
+  box-shadow: 2px -2px 8px 0px rgba(128,128,128,1);
+  background-image: none;
+  margin: 38px auto 36px;
+  padding: 20px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-14 .u-text-1 {
+    margin-top: 53px;
+  }
+
+  .u-section-14 .u-btn-1 {
+    border-style: none;
+    margin-bottom: 53px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-14 .u-text-1 {
+    font-size: 1.5rem;
+  }
+} .u-section-15 {
+  background-image: none;
+}
+
+.u-section-15 .u-sheet-1 {
   min-height: 341px;
 }
 
-.u-section-13 .u-layout-wrap-1 {
+.u-section-15 .u-layout-wrap-1 {
   margin-top: 60px;
   margin-bottom: 60px;
 }
 
-.u-section-13 .u-image-1 {
+.u-section-15 .u-image-1 {
   min-height: 221px;
   background-image: url("images/pexels-photo-6382633.jpeg");
   background-position: 50% 50%;
 }
 
-.u-section-13 .u-container-layout-1 {
+.u-section-15 .u-container-layout-1 {
   padding: 30px;
 }
 
-.u-section-13 .u-layout-cell-2 {
+.u-section-15 .u-layout-cell-2 {
   min-height: 221px;
   background-image: none;
 }
 
-.u-section-13 .u-container-layout-2 {
+.u-section-15 .u-container-layout-2 {
   padding: 30px 10px;
 }
 
-.u-section-13 .u-text-1 {
+.u-section-15 .u-text-1 {
   font-size: 3rem;
   font-weight: 700;
   background-image: none;
   margin: 0;
 }
 
-.u-section-13 .u-layout-cell-3 {
+.u-section-15 .u-layout-cell-3 {
   min-height: 221px;
   background-image: none;
   --animation-custom_in-translate_x: 300px;
@@ -1116,95 +1088,95 @@
   --animation-custom_in-scale: 1;
 }
 
-.u-section-13 .u-container-layout-3 {
+.u-section-15 .u-container-layout-3 {
   padding: 30px 10px;
 }
 
-.u-section-13 .u-icon-1 {
+.u-section-15 .u-icon-1 {
   width: 92px;
   height: 92px;
   margin: 35px auto 0;
 }
 
 @media (max-width: 1199px) {
-  .u-section-13 .u-sheet-1 {
+  .u-section-15 .u-sheet-1 {
     min-height: 326px;
   }
 
-  .u-section-13 .u-image-1 {
+  .u-section-15 .u-image-1 {
     min-height: 182px;
   }
 
-  .u-section-13 .u-layout-cell-2 {
+  .u-section-15 .u-layout-cell-2 {
     min-height: 153px;
   }
 
-  .u-section-13 .u-layout-cell-3 {
+  .u-section-15 .u-layout-cell-3 {
     min-height: 182px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-13 .u-sheet-1 {
+  .u-section-15 .u-sheet-1 {
     min-height: 278px;
   }
 
-  .u-section-13 .u-image-1 {
+  .u-section-15 .u-image-1 {
     min-height: 305px;
   }
 
-  .u-section-13 .u-layout-cell-2 {
+  .u-section-15 .u-layout-cell-2 {
     min-height: 113px;
   }
 
-  .u-section-13 .u-text-1 {
+  .u-section-15 .u-text-1 {
     width: auto;
     margin-left: auto;
     margin-right: auto;
   }
 
-  .u-section-13 .u-layout-cell-3 {
+  .u-section-15 .u-layout-cell-3 {
     min-height: 139px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-13 .u-sheet-1 {
+  .u-section-15 .u-sheet-1 {
     min-height: 826px;
   }
 
-  .u-section-13 .u-image-1 {
+  .u-section-15 .u-image-1 {
     min-height: 763px;
   }
 
-  .u-section-13 .u-container-layout-1 {
+  .u-section-15 .u-container-layout-1 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-13 .u-layout-cell-2 {
+  .u-section-15 .u-layout-cell-2 {
     min-height: 100px;
   }
 
-  .u-section-13 .u-layout-cell-3 {
+  .u-section-15 .u-layout-cell-3 {
     min-height: 313px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-13 .u-sheet-1 {
+  .u-section-15 .u-sheet-1 {
     min-height: 667px;
   }
 
-  .u-section-13 .u-image-1 {
+  .u-section-15 .u-image-1 {
     min-height: 480px;
   }
 
-  .u-section-13 .u-text-1 {
+  .u-section-15 .u-text-1 {
     font-size: 1.5rem;
   }
 
-  .u-section-13 .u-layout-cell-3 {
+  .u-section-15 .u-layout-cell-3 {
     min-height: 197px;
   }
 }
