--- a/Terapia-de-pareja-near-me.css
+++ b/Terapia-de-pareja-near-me.css
@@ -4,7 +4,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 880px;
+  min-height: 918px;
 }
 
 .u-section-1 .u-text-1 {
@@ -27,13 +27,24 @@
   font-size: 1.25rem;
   letter-spacing: 1px;
   box-shadow: 2px -2px 8px 0px rgba(128,128,128,1);
-  margin: 27px auto 60px 0;
+  margin: 45px 106px 0 auto;
+  padding: 20px;
+}
+
+.u-section-1 .u-btn-2 {
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 1.25rem;
+  letter-spacing: 1px;
+  box-shadow: 2px -2px 8px 0px rgba(128,128,128,1);
+  background-image: none;
+  margin: -72px auto 60px 133px;
   padding: 20px;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 726px;
+    min-height: 757px;
   }
 
   .u-section-1 .u-text-1 {
@@ -48,12 +59,17 @@
     border-style: none;
     padding-right: 31px;
     padding-left: 30px;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-btn-2 {
+    margin-left: 0;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 556px;
+    min-height: 580px;
   }
 
   .u-section-1 .u-text-1 {
@@ -74,7 +90,7 @@
   }
 
   .u-section-1 .u-sheet-1 {
-    min-height: 417px;
+    min-height: 435px;
   }
 
   .u-section-1 .u-text-1 {
@@ -88,7 +104,7 @@
   }
 
   .u-section-1 .u-sheet-1 {
-    min-height: 263px;
+    min-height: 274px;
   }
 
   .u-section-1 .u-text-1 {
@@ -143,7 +159,7 @@
 .u-section-3 .u-video-1 {
   width: 925px;
   height: 509px;
-  margin: -119px auto 60px;
+  margin: -123px auto 60px;
 }
 
 @media (max-width: 991px) {
@@ -956,7 +972,7 @@
 }
 
 .u-section-13 .u-sheet-1 {
-  min-height: 769px;
+  min-height: 902px;
 }
 
 .u-section-13 .u-text-1 {
@@ -967,7 +983,8 @@
 .u-section-13 .u-text-2 {
   font-size: 1.875rem;
   background-image: none;
-  margin: 38px auto 0 0;
+  padding-left: 68px;
+  margin: 33px 0 0;
 }
 
 .u-section-13 .u-btn-1 {
@@ -977,7 +994,7 @@
   font-size: 1.25rem;
   box-shadow: 2px -2px 8px 0px rgba(128,128,128,1);
   background-image: none;
-  margin: 25px auto 45px;
+  margin: 30px auto 45px;
   padding: 20px;
 }
 
@@ -999,6 +1016,10 @@
 @media (max-width: 575px) {
   .u-section-13 .u-sheet-1 {
     min-height: 2173px;
+  }
+
+  .u-section-13 .u-text-2 {
+    padding-left: 20px;
   }
 } .u-section-14 {
   background-image: none;
