Pagina final merge nueva mas anterior

--- a/Contacto.css
+++ b/Contacto.css
@@ -8,7 +8,7 @@
 }
 
 .u-section-1 .u-layout-cell-1 {
-  min-height: 1060px;
+  min-height: 1086px;
 }
 
 .u-section-1 .u-container-layout-1 {
@@ -16,17 +16,15 @@
 }
 
 .u-section-1 .u-text-1 {
-  text-transform: uppercase;
-  background-image: none;
+  font-size: 1.25rem;
   font-weight: 700;
-  font-size: 1.875rem;
   margin: 0;
 }
 
 .u-section-1 .u-image-1 {
   width: 429px;
   height: 630px;
-  margin: 3px 37px 0 auto;
+  margin: 0 30px 0 auto;
 }
 
 .u-section-1 .u-layout-cell-2 {
@@ -43,7 +41,7 @@
 }
 
 .u-section-1 .u-text-3 {
-  font-size: 1.875rem;
+  font-size: 1.25rem;
   margin: 36px 13px 0;
 }
 
@@ -56,7 +54,6 @@
 .u-section-1 .u-icon-1 {
   width: 106px;
   height: 106px;
-  background-image: none;
   margin: 11px auto 0;
   padding: 21px;
 }
@@ -172,16 +169,8 @@
     min-height: 652px;
   }
 
-  .u-section-1 .u-text-1 {
-    font-size: 1.5rem;
-  }
-
   .u-section-1 .u-image-1 {
     margin-top: -322px;
-  }
-
-  .u-section-1 .u-text-3 {
-    font-size: 1.5rem;
   }
 
   .u-section-1 .u-icon-2 {
