--- a/Acerca-de-mí.css
+++ b/Acerca-de-mí.css
@@ -1,36 +1,29 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 1100px;
+  min-height: 100vh;
 }
 
 .u-section-1 .u-shape-1 {
-  width: 1088px;
-  height: 918px;
-  margin: 80px 0 0 auto;
+  width: 883px;
+  height: 563px;
+  margin: 21px 78px 0 auto;
 }
 
 .u-section-1 .u-image-1 {
-  width: 690px;
-  height: 691px;
+  width: 470px;
+  height: 471px;
   object-position: 0% 50%;
   background-position: 50% 50%;
   background-image: url("images/tikt.jpg");
-  margin: -862px 115px 0 auto;
-}
-
-.u-section-1 .u-shape-2 {
-  width: 227px;
-  height: 228px;
-  background-image: none;
-  margin: -35px 78px 0 auto;
+  margin: -500px 198px 0 auto;
 }
 
 .u-section-1 .u-group-1 {
   background-image: none;
   width: 539px;
-  min-height: 504px;
+  min-height: 215px;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.15);
   height: auto;
-  margin: -481px auto 60px 0;
+  margin: -34px auto 0 0;
 }
 
 .u-section-1 .u-container-layout-1 {
@@ -38,50 +31,60 @@
 }
 
 .u-section-1 .u-text-1 {
-  font-size: 4.1875rem;
   font-weight: 700;
   font-family: "PT Sans", sans-serif;
+  font-size: 2.25rem;
   margin: 22px 0 0;
+}
+
+.u-section-1 .u-shape-2 {
+  width: 227px;
+  height: 228px;
+  background-image: none;
+  margin: -225px 119px 55px auto;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-shape-1 {
-    width: 940px;
+    margin-right: 57px;
   }
 
   .u-section-1 .u-image-1 {
-    width: 691px;
+    width: 471px;
   }
 
   .u-section-1 .u-group-1 {
     width: 520px;
-    min-height: 443px;
+    min-height: 208px;
     height: auto;
+  }
+
+  .u-section-1 .u-shape-2 {
+    margin-top: -228px;
+    margin-right: 77px;
+    margin-bottom: 60px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-shape-1 {
-    width: 709px;
-    height: 827px;
+    width: 618px;
+    height: 726px;
+    margin-top: -17px;
+    margin-right: 26px;
   }
 
   .u-section-1 .u-image-1 {
-    width: 629px;
-    height: 629px;
-    margin-top: -771px;
-    margin-right: 29px;
-  }
-
-  .u-section-1 .u-shape-2 {
-    margin-top: 62px;
-    margin-right: 0;
+    width: 504px;
+    height: 504px;
+    margin-top: -668px;
+    margin-right: 45px;
   }
 
   .u-section-1 .u-group-1 {
-    width: 440px;
-    min-height: 417px;
-    margin-top: -516px;
+    width: 470px;
+    min-height: 169px;
+    margin-top: 13px;
   }
 
   .u-section-1 .u-container-layout-1 {
@@ -90,7 +93,15 @@
   }
 
   .u-section-1 .u-text-1 {
-    font-size: 3.75rem;
+    width: auto;
+    margin-top: 26px;
+  }
+
+  .u-section-1 .u-shape-2 {
+    width: 182px;
+    height: 182px;
+    margin-top: -182px;
+    margin-right: 0;
   }
 }
 
@@ -101,6 +112,7 @@
 
   .u-section-1 .u-shape-1 {
     height: 616px;
+    margin-top: 186px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
@@ -110,19 +122,12 @@
     width: 444px;
     height: 444px;
     margin-top: -560px;
-    margin-right: 45px;
-  }
-
-  .u-section-1 .u-shape-2 {
-    width: 169px;
-    height: 170px;
-    margin-top: 276px;
   }
 
   .u-section-1 .u-group-1 {
     width: 416px;
     min-height: 337px;
-    margin-top: -498px;
+    margin-top: -52px;
   }
 
   .u-section-1 .u-container-layout-1 {
@@ -133,15 +138,23 @@
   .u-section-1 .u-text-1 {
     font-size: 3rem;
   }
+
+  .u-section-1 .u-shape-2 {
+    width: 169px;
+    height: 170px;
+    margin-top: -9px;
+    margin-bottom: -66px;
+  }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1010px;
+    min-height: 100vh;
   }
 
   .u-section-1 .u-shape-1 {
     height: 385px;
+    margin-top: 41px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
@@ -150,19 +163,13 @@
   .u-section-1 .u-image-1 {
     width: 284px;
     height: 284px;
-    margin-top: -334px;
-    margin-right: 13px;
-  }
-
-  .u-section-1 .u-shape-2 {
-    width: 131px;
-    height: 132px;
-    margin-top: 412px;
-    margin-right: 1px;
+    margin-top: -335px;
+    margin-right: 0;
   }
 
   .u-section-1 .u-group-1 {
-    margin-top: -511px;
+    min-height: 241px;
+    margin-top: 21px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
@@ -171,14 +178,48 @@
   .u-section-1 .u-text-1 {
     font-size: 2.25rem;
   }
+
+  .u-section-1 .u-shape-2 {
+    width: 131px;
+    height: 132px;
+    margin-top: -37px;
+    margin-bottom: 60px;
+  }
 } .u-section-2 {
   background-image: none;
 }
 
 .u-section-2 .u-sheet-1 {
-  min-height: 1035px;
+  min-height: 793px;
 }
 
 .u-section-2 .u-text-1 {
-  margin: 35px 0 60px;
+  font-size: 1.25rem;
+  margin: 34px 0 60px;
+}
+
+.u-section-2 .u-btn-1 {
+  background-image: none;
+  padding: 0;
+}
+
+@media (max-width: 991px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 828px;
+  }
+
+  .u-section-2 .u-text-1 {
+    width: auto;
+    margin-top: 0;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 1439px;
+  }
+
+  .u-section-2 .u-text-1 {
+    margin-top: 28px;
+  }
 }
