--- a/Terapia-de-pareja-near-me.css
+++ b/Terapia-de-pareja-near-me.css
@@ -4,95 +4,142 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 918px;
+  min-height: 793px;
+}
+
+.u-section-1 .u-layout-wrap-1 {
+  margin-top: 97px;
+  margin-bottom: 60px;
+}
+
+.u-section-1 .u-layout-cell-1 {
+  min-height: 200px;
+}
+
+.u-section-1 .u-container-layout-1 {
+  padding: 30px;
 }
 
 .u-section-1 .u-text-1 {
-  font-size: 4.5rem;
-  letter-spacing: 0px;
-  text-transform: none;
-  font-weight: 700;
-  font-family: Montserrat, sans-serif;
-  margin: 210px 318px 0 0;
+  font-size: 2.25rem;
+  margin: 0 auto;
+}
+
+.u-section-1 .u-layout-cell-2 {
+  min-height: 200px;
+}
+
+.u-section-1 .u-container-layout-2 {
+  padding: 30px;
 }
 
 .u-section-1 .u-text-2 {
   font-size: 1.5rem;
-  margin: 79px 392px 0 0;
+  margin: 30px 51px 0;
+}
+
+.u-section-1 .u-layout-cell-3 {
+  min-height: 198px;
+}
+
+.u-section-1 .u-container-layout-3 {
+  padding: 30px;
 }
 
 .u-section-1 .u-btn-1 {
   font-weight: 700;
   text-transform: uppercase;
-  font-size: 1.25rem;
+  font-size: 1.125rem;
   letter-spacing: 1px;
   box-shadow: 2px -2px 8px 0px rgba(128,128,128,1);
-  margin: 45px 106px 0 auto;
-  padding: 20px;
+  background-image: none;
+  margin: 37px auto 0;
+  padding: 3px 15px 4px 13px;
+}
+
+.u-section-1 .u-layout-cell-4 {
+  min-height: 198px;
+}
+
+.u-section-1 .u-container-layout-4 {
+  padding: 30px;
 }
 
 .u-section-1 .u-btn-2 {
   font-weight: 700;
   text-transform: uppercase;
-  font-size: 1.25rem;
+  font-size: 1.125rem;
   letter-spacing: 1px;
   box-shadow: 2px -2px 8px 0px rgba(128,128,128,1);
+  --radius: 45px;
   background-image: none;
-  margin: -72px auto 0 133px;
-  padding: 20px;
-}
-
-.u-section-1 .u-text-3 {
-  margin: 30px 392px 60px 0;
+  margin: 37px auto 0;
+  padding: 3px 50px 4px 49px;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 757px;
+    min-height: 609px;
   }
 
-  .u-section-1 .u-text-1 {
-    margin-right: 118px;
+  .u-section-1 .u-layout-wrap-1 {
+    position: relative;
+    margin-bottom: 0;
+  }
+
+  .u-section-1 .u-layout-cell-1 {
+    min-height: 165px;
+  }
+
+  .u-section-1 .u-layout-cell-2 {
+    min-height: 165px;
   }
 
   .u-section-1 .u-text-2 {
-    margin-right: 192px;
-  }
-
-  .u-section-1 .u-btn-1 {
-    border-style: none;
-    padding-right: 31px;
-    padding-left: 30px;
+    font-size: 1.25rem;
+    margin-left: 0;
     margin-right: 0;
   }
 
-  .u-section-1 .u-btn-2 {
-    margin-left: 0;
+  .u-section-1 .u-layout-cell-3 {
+    min-height: 189px;
   }
 
-  .u-section-1 .u-text-3 {
-    margin-right: 192px;
+  .u-section-1 .u-btn-1 {
+    margin-top: 16px;
+    padding-right: 26px;
+    padding-left: 25px;
+  }
+
+  .u-section-1 .u-layout-cell-4 {
+    min-height: 189px;
+  }
+
+  .u-section-1 .u-btn-2 {
+    padding-right: 26px;
+    padding-left: 25px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 580px;
+    min-height: 532px;
   }
 
-  .u-section-1 .u-text-1 {
-    width: auto;
-    margin-top: 118px;
-    margin-right: 0;
+  .u-section-1 .u-layout-cell-1 {
+    min-height: 100px;
   }
 
-  .u-section-1 .u-text-2 {
-    margin-top: 32px;
-    margin-right: 0;
+  .u-section-1 .u-layout-cell-2 {
+    min-height: 100px;
   }
 
-  .u-section-1 .u-text-3 {
-    margin-right: 0;
+  .u-section-1 .u-layout-cell-3 {
+    min-height: 100px;
+  }
+
+  .u-section-1 .u-layout-cell-4 {
+    min-height: 100px;
   }
 }
 
@@ -102,11 +149,27 @@
   }
 
   .u-section-1 .u-sheet-1 {
-    min-height: 435px;
+    min-height: 511px;
   }
 
-  .u-section-1 .u-text-1 {
-    font-size: 3rem;
+  .u-section-1 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-1 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-1 .u-container-layout-3 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-1 .u-container-layout-4 {
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
 
@@ -116,26 +179,38 @@
   }
 
   .u-section-1 .u-sheet-1 {
-    min-height: 274px;
+    min-height: 488px;
   }
 
   .u-section-1 .u-text-1 {
-    font-size: 2.25rem;
-    margin-top: 119px;
+    font-size: 1.875rem;
   }
 } .u-section-2 {
   background-image: none;
 }
 
 .u-section-2 .u-sheet-1 {
-  min-height: 162px;
+  min-height: 140px;
 }
 
 .u-section-2 .u-text-1 {
-  font-weight: 700;
   line-height: 43px;
+  font-size: 2.25rem;
+  font-weight: 400;
   width: 740px;
-  margin: 38px auto;
+  margin: 39px auto 15px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 103px;
+  }
+
+  .u-section-2 .u-text-1 {
+    font-size: 1.25rem;
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
 }
 
 @media (max-width: 991px) {
@@ -174,9 +249,19 @@
   margin: -123px auto 60px;
 }
 
+@media (max-width: 1199px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 615px;
+  }
+
+  .u-section-3 .u-line-1 {
+    margin-top: 160px;
+  }
+}
+
 @media (max-width: 991px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 522px;
+    min-height: 502px;
   }
 
   .u-section-3 .u-video-1 {
@@ -187,7 +272,7 @@
 
 @media (max-width: 767px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 423px;
+    min-height: 403px;
   }
 
   .u-section-3 .u-video-1 {
@@ -198,7 +283,7 @@
 
 @media (max-width: 575px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 313px;
+    min-height: 293px;
   }
 
   .u-section-3 .u-video-1 {
@@ -210,17 +295,16 @@
 }
 
 .u-section-4 .u-sheet-1 {
-  min-height: 690px;
+  min-height: 607px;
 }
 
 .u-section-4 .u-text-1 {
-  font-weight: 700;
-  margin: 35px 51px 0;
+  margin: 66px 51px 0;
 }
 
 .u-section-4 .u-text-2 {
-  font-size: 1.875rem;
-  margin: 0 0 60px;
+  font-size: 1.25rem;
+  margin: 0 0 47px;
 }
 
 @media (max-width: 1199px) {
@@ -238,7 +322,12 @@
 
 @media (max-width: 767px) {
   .u-section-4 .u-text-1 {
+    margin-top: 60px;
     width: 540px;
+  }
+
+  .u-section-4 .u-text-2 {
+    margin-bottom: 60px;
   }
 }
 
@@ -246,17 +335,32 @@
   .u-section-4 .u-text-1 {
     width: 340px;
   }
-
-  .u-section-4 .u-text-2 {
-    font-size: 1.5rem;
-  }
 }.u-section-5 .u-sheet-1 {
-  min-height: 138px;
+  min-height: 140px;
 }
 
 .u-section-5 .u-text-1 {
-  font-weight: 700;
-  margin: 28px auto 32px;
+  width: 792px;
+  font-weight: 400;
+  margin: 31px auto 30px;
+}
+
+@media (max-width: 991px) {
+  .u-section-5 .u-text-1 {
+    width: 720px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-5 .u-text-1 {
+    width: 540px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-5 .u-text-1 {
+    width: 340px;
+  }
 } .u-section-6 {
   background-image: none;
 }
@@ -536,8 +640,7 @@
 }
 
 .u-section-7 .u-text-1 {
-  font-weight: 700;
-  margin: 30px 38px -9px;
+  margin: 30px 38px 29px;
 }
 
 @media (max-width: 1199px) {
@@ -604,8 +707,9 @@
 }
 
 .u-section-9 .u-text-1 {
-  font-weight: 700;
-  margin: 45px 38px;
+  font-size: 1.875rem;
+  font-weight: 400;
+  margin: 45px 38px 43px;
 }
 
 @media (max-width: 1199px) {
@@ -618,6 +722,7 @@
   .u-section-9 .u-text-1 {
     margin-left: auto;
     margin-right: auto;
+    font-size: 1.5rem;
   }
 } .u-section-10 {
   background-image: none;
@@ -680,6 +785,7 @@
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
   width: 723px;
+  font-size: 1.875rem;
   margin: 30px auto 0;
 }
 
@@ -962,14 +1068,16 @@
 @media (max-width: 575px) {
   .u-section-11 .u-text-1 {
     width: 340px;
+    font-size: 1.5rem;
   }
 }.u-section-12 .u-sheet-1 {
   min-height: 138px;
 }
 
 .u-section-12 .u-text-1 {
-  font-weight: 700;
   font-style: italic;
+  font-size: 1.875rem;
+  font-weight: 400;
   margin: 30px 76px;
 }
 
@@ -979,21 +1087,27 @@
     margin-left: 0;
     margin-right: 0;
   }
+}
+
+@media (max-width: 575px) {
+  .u-section-12 .u-text-1 {
+    font-size: 1.5rem;
+  }
 } .u-section-13 {
   background-image: none;
 }
 
 .u-section-13 .u-sheet-1 {
-  min-height: 902px;
+  min-height: 587px;
 }
 
 .u-section-13 .u-text-1 {
-  font-size: 1.875rem;
-  margin: 33px 0 0;
+  font-size: 1.25rem;
+  margin: 50px 0 0;
 }
 
 .u-section-13 .u-text-2 {
-  font-size: 1.875rem;
+  font-size: 1.25rem;
   background-image: none;
   padding-left: 68px;
   margin: 33px 0 0;
@@ -1006,28 +1120,51 @@
   font-size: 1.25rem;
   box-shadow: 2px -2px 8px 0px rgba(128,128,128,1);
   background-image: none;
-  margin: 30px auto 45px;
+  margin: 30px auto 50px;
   padding: 20px;
 }
 
 @media (max-width: 1199px) {
   .u-section-13 .u-sheet-1 {
-    min-height: 933px;
+    min-height: 520px;
   }
 
   .u-section-13 .u-text-1 {
     width: auto;
-    margin-top: 53px;
+    margin-top: 0;
+    margin-right: 278px;
   }
 
   .u-section-13 .u-btn-1 {
     border-style: none;
+    margin-bottom: 33px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-13 .u-sheet-1 {
+    min-height: 793px;
+  }
+
+  .u-section-13 .u-text-1 {
+    margin-top: 161px;
+    margin-right: 58px;
+  }
+
+  .u-section-13 .u-btn-1 {
+    margin-bottom: 18px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-13 .u-text-1 {
+    margin-right: 0;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-13 .u-sheet-1 {
-    min-height: 2173px;
+    min-height: 1169px;
   }
 
   .u-section-13 .u-text-2 {
@@ -1038,12 +1175,20 @@
 }
 
 .u-section-14 .u-sheet-1 {
-  min-height: 967px;
+  min-height: 793px;
 }
 
 .u-section-14 .u-text-1 {
-  font-size: 1.875rem;
-  margin: 29px 0 0;
+  margin-bottom: 0;
+  margin-right: 25px;
+  margin-left: 25px;
+}
+
+.u-section-14 .u-text-2 {
+  margin-left: 25px;
+  margin-right: 25px;
+  margin-bottom: 0;
+  font-size: 1.25rem;
 }
 
 .u-section-14 .u-btn-1 {
@@ -1053,40 +1198,28 @@
   font-size: 1.25rem;
   box-shadow: 2px -2px 8px 0px rgba(128,128,128,1);
   background-image: none;
-  margin: 38px auto 36px;
+  margin: 42px auto 55px;
   padding: 20px;
 }
 
 @media (max-width: 1199px) {
-  .u-section-14 .u-text-1 {
-    margin-top: 53px;
-  }
-
-  .u-section-14 .u-btn-1 {
-    border-style: none;
-    margin-bottom: 53px;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-14 .u-text-1 {
-    font-size: 1.5rem;
+  .u-section-14 .u-text-2 {
+    margin-right: 0;
   }
 } .u-section-15 {
   background-image: none;
 }
 
 .u-section-15 .u-sheet-1 {
-  min-height: 341px;
+  min-height: 269px;
 }
 
 .u-section-15 .u-layout-wrap-1 {
-  margin-top: 60px;
-  margin-bottom: 60px;
+  margin: 30px 0;
 }
 
 .u-section-15 .u-image-1 {
-  min-height: 221px;
+  min-height: 209px;
   background-image: url("images/pexels-photo-6382633.jpeg");
   background-position: 50% 50%;
 }
@@ -1096,7 +1229,7 @@
 }
 
 .u-section-15 .u-layout-cell-2 {
-  min-height: 221px;
+  min-height: 209px;
   background-image: none;
 }
 
@@ -1108,11 +1241,11 @@
   font-size: 3rem;
   font-weight: 700;
   background-image: none;
-  margin: 0;
+  margin: 28px 0 0;
 }
 
 .u-section-15 .u-layout-cell-3 {
-  min-height: 221px;
+  min-height: 209px;
   background-image: none;
   --animation-custom_in-translate_x: 300px;
   --animation-custom_in-translate_y: 0px;
@@ -1136,8 +1269,13 @@
     min-height: 326px;
   }
 
+  .u-section-15 .u-layout-wrap-1 {
+    margin-right: initial;
+    margin-left: initial;
+  }
+
   .u-section-15 .u-image-1 {
-    min-height: 182px;
+    min-height: 172px;
   }
 
   .u-section-15 .u-layout-cell-2 {
@@ -1145,7 +1283,7 @@
   }
 
   .u-section-15 .u-layout-cell-3 {
-    min-height: 182px;
+    min-height: 172px;
   }
 }
 
@@ -1162,14 +1300,8 @@
     min-height: 113px;
   }
 
-  .u-section-15 .u-text-1 {
-    width: auto;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
   .u-section-15 .u-layout-cell-3 {
-    min-height: 139px;
+    min-height: 132px;
   }
 }
 
@@ -1192,7 +1324,7 @@
   }
 
   .u-section-15 .u-layout-cell-3 {
-    min-height: 313px;
+    min-height: 297px;
   }
 }
 
@@ -1210,6 +1342,6 @@
   }
 
   .u-section-15 .u-layout-cell-3 {
-    min-height: 197px;
+    min-height: 187px;
   }
 }
