add widget whatsapp

--- a/nicepage.css
+++ b/nicepage.css
@@ -44515,6 +44515,78 @@ a.u-link.u-text-hover-grey-90:hover {
 
         
         
+        .u-custom-color-18,
+        .u-body.u-custom-color-18,
+        section.u-custom-color-18:before,
+        .u-custom-color-18 > .u-audio-main-layout-wrapper:before,
+        .u-custom-color-18 > .u-container-layout:before,
+        .u-custom-color-18 > .u-inner-container-layout:before,
+        .u-custom-color-18.u-sidenav:before,
+        .u-container-layout.u-container-layout.u-custom-color-18:before,
+        .u-table-alt-custom-color-18 tr:nth-child(even)
+        {
+            color: #111111;
+            background-color: rgba(147,218,229,0.8901960784313725);
+        }
+
+        .u-input.u-custom-color-18,
+        .u-field-input.u-custom-color-18,
+        .u-button-style.u-custom-color-18,
+        .u-button-style.u-custom-color-18[class*="u-border-"]
+        {
+            color: #111111 !important;
+            background-color: rgba(147,218,229,0.8901960784313725) !important;
+        }
+
+        .u-button-style.u-custom-color-18:hover,
+        .u-button-style.u-custom-color-18[class*="u-border-"]:hover,
+        .u-button-style.u-custom-color-18:focus,
+        .u-button-style.u-custom-color-18[class*="u-border-"]:focus,
+        .u-button-style.u-button-style.u-custom-color-18:active,
+        .u-button-style.u-button-style.u-custom-color-18[class*="u-border-"]:active,
+        .u-button-style.u-button-style.u-custom-color-18.active,
+        .u-button-style.u-button-style.u-custom-color-18[class*="u-border-"].active,
+        li.active > .u-button-style.u-button-style.u-custom-color-18,
+        li.active > .u-button-style.u-button-style.u-custom-color-18[class*="u-border-"]
+        {
+            color: #111111 !important;
+            background-color: rgba(117,208,222,0.8901960784313725) !important;
+        }
+
+        .u-hover-custom-color-18:hover,
+        .u-hover-custom-color-18[class*="u-border-"]:hover,
+        .u-hover-custom-color-18:focus,
+        .u-hover-custom-color-18[class*="u-border-"]:focus,
+        .u-active-custom-color-18.u-active.u-active,
+        .u-active-custom-color-18[class*="u-border-"].u-active.u-active,
+        a.u-button-style.u-hover-custom-color-18:hover,
+        a.u-button-style.u-hover-custom-color-18.hover,
+        a.u-button-style.u-hover-custom-color-18[class*="u-border-"]:hover,
+        a.u-button-style.u-hover-custom-color-18[class*="u-border-"].hover,
+        a.u-button-style:hover > .u-hover-custom-color-18,
+        a.u-button-style:hover > .u-hover-custom-color-18[class*="u-border-"],
+        a.u-button-style.u-hover-custom-color-18:focus,
+        a.u-button-style.u-hover-custom-color-18[class*="u-border-"]:focus,
+        a.u-button-style.u-button-style.u-active-custom-color-18:active,
+        a.u-button-style.u-button-style.u-active-custom-color-18[class*="u-border-"]:active,
+        a.u-button-style.u-button-style.u-active-custom-color-18.active,
+        a.u-button-style.u-button-style.u-active-custom-color-18[class*="u-border-"].active,
+        a.u-button-style.u-button-style.active > .u-active-custom-color-18,
+        a.u-button-style.u-button-style.active > .u-active-custom-color-18[class*="u-border-"],
+        li.active > a.u-button-style.u-button-style.u-active-custom-color-18,
+        li.active > a.u-button-style.u-button-style.u-active-custom-color-18[class*="u-border-"],
+        input.u-field-input.u-field-input.u-active-custom-color-18:checked
+        {
+            color: #111111 !important;
+            background-color: rgba(147,218,229,0.8901960784313725) !important;
+        }
+
+        a.u-link.u-hover-custom-color-18:hover {
+            color: rgba(147,218,229,0.8901960784313725) !important;
+        }
+
+        
+        
         .u-custom-color-19,
         .u-body.u-custom-color-19,
         section.u-custom-color-19:before,
@@ -45267,6 +45339,57 @@ a.u-link.u-text-hover-grey-90:hover {
         }
 
         .u-link.u-border-custom-color-16[class*="u-border-"]:hover
+        {
+            border-color: rgba(117,208,222,0.8901960784313725) !important;
+        }
+        
+        
+        .u-border-custom-color-18,
+        .u-border-custom-color-18.u-input,
+        .u-border-custom-color-18.u-field-input.u-field-input,
+        .u-separator-custom-color-18:after
+        {
+            border-color: rgba(147,218,229,0.8901960784313725);
+            stroke: rgba(147,218,229,0.8901960784313725);
+        }
+
+        .u-button-style.u-border-custom-color-18
+        {
+            border-color: rgba(147,218,229,0.8901960784313725) !important;
+            color: rgba(147,218,229,0.8901960784313725) !important;
+            background-color: transparent !important;
+        }
+
+        .u-button-style.u-border-custom-color-18:hover,
+        .u-button-style.u-border-custom-color-18:focus
+        {
+            border-color: transparent !important;
+            color: rgba(117,208,222,0.8901960784313725) !important;
+            background-color: transparent !important;
+        }
+
+        .u-border-hover-custom-color-18:hover,
+        .u-border-hover-custom-color-18:focus,
+        .u-border-active-custom-color-18.u-active.u-active,
+        a.u-button-style.u-border-hover-custom-color-18:hover,
+        a.u-button-style:hover > .u-border-hover-custom-color-18,
+        a.u-button-style.u-border-hover-custom-color-18:focus,
+        a.u-button-style.u-button-style.u-border-active-custom-color-18:active,
+        a.u-button-style.u-button-style.u-border-active-custom-color-18.active,
+        a.u-button-style.u-button-style.active > .u-border-active-custom-color-18,
+        li.active > a.u-button-style.u-button-style.u-border-active-custom-color-18,
+        input.u-field-input.u-field-input.u-border-active-custom-color-18:checked
+        {
+            color: rgba(147,218,229,0.8901960784313725) !important;
+            border-color: rgba(147,218,229,0.8901960784313725) !important;
+        }
+
+        .u-link.u-border-custom-color-18[class*="u-border-"]
+        {
+            border-color: rgba(147,218,229,0.8901960784313725) !important;
+        }
+
+        .u-link.u-border-custom-color-18[class*="u-border-"]:hover
         {
             border-color: rgba(117,208,222,0.8901960784313725) !important;
         }
@@ -46330,6 +46453,86 @@ a.u-link.u-text-hover-grey-90:hover {
         }
 
         a.u-link.u-text-hover-custom-color-16:hover
+        {
+            color: rgba(147,218,229,0.8901960784313725) !important;
+        }
+        
+        
+        .u-text-custom-color-18,
+        .u-input.u-text-custom-color-18,
+        .u-input.u-text-custom-color-18[class*="u-border-"],
+        li.active > a.u-button-style.u-text-custom-color-18,
+        li.active > a.u-button-style.u-text-custom-color-18[class*="u-border-"],
+        a.u-button-style.u-text-custom-color-18,
+        a.u-button-style.u-text-custom-color-18[class*="u-border-"]
+        {
+            color: rgba(147,218,229,0.8901960784313725) !important;
+            
+            
+            
+        }
+
+        a.u-button-style.u-text-custom-color-18:hover,
+        a.u-button-style.u-text-custom-color-18[class*="u-border-"]:hover,
+        a.u-button-style.u-text-custom-color-18:focus,
+        a.u-button-style.u-text-custom-color-18[class*="u-border-"]:focus,
+        a.u-button-style.u-button-style.u-text-custom-color-18:active,
+        a.u-button-style.u-button-style.u-text-custom-color-18[class*="u-border-"]:active,
+        a.u-button-style.u-button-style.u-text-custom-color-18.active,
+        a.u-button-style.u-button-style.u-text-custom-color-18[class*="u-border-"].active
+        {
+            color: rgba(117,208,222,0.8901960784313725) !important;
+        }
+
+        /* hover */
+        a.u-button-style:hover > .u-text-hover-custom-color-18,
+        a.u-button-style:hover > .u-text-hover-custom-color-18[class*="u-border-"],
+        a.u-button-style.u-button-style.u-text-hover-custom-color-18:hover,
+        a.u-button-style.u-button-style.u-text-hover-custom-color-18[class*="u-border-"]:hover,
+        a.u-button-style.u-button-style.u-button-style.u-text-hover-custom-color-18.active,
+        a.u-button-style.u-button-style.u-button-style.u-text-hover-custom-color-18[class*="u-border-"].active,
+        a.u-button-style.u-button-style.u-button-style.u-text-hover-custom-color-18:active,
+        a.u-button-style.u-button-style.u-button-style.u-text-hover-custom-color-18[class*="u-border-"]:active,
+        a.u-button-style.u-button-style.u-text-hover-custom-color-18:focus,
+        a.u-button-style.u-button-style.u-text-hover-custom-color-18[class*="u-border-"]:focus,
+        /* active */
+        a.u-button-style.u-button-style.u-button-style.u-button-style.u-text-active-custom-color-18:active,
+        a.u-button-style.u-button-style.u-button-style.u-button-style.u-text-active-custom-color-18[class*="u-border-"]:active,
+        a.u-button-style.u-button-style.u-button-style.u-button-style.u-text-active-custom-color-18.active,
+        a.u-button-style.u-button-style.u-button-style.u-button-style.u-text-active-custom-color-18[class*="u-border-"].active,
+        a.u-button-style.u-button-style.active > .u-text-active-custom-color-18,
+        a.u-button-style.u-button-style.active > .u-text-active-custom-color-18[class*="u-border-"],
+        :not(.level-2) > .u-nav > .u-nav-item > a.u-nav-link.u-text-hover-custom-color-18:hover,
+        :not(.level-2) > .u-nav > .u-nav-item > a.u-nav-link.u-nav-link.u-text-active-custom-color-18.active,
+        .u-text-hover-custom-color-18.u-language-url:hover,
+        .u-text-hover-custom-color-18 .u-language-url:hover,
+        .u-text-hover-custom-color-18.u-carousel-control:hover,
+        .u-text-hover-custom-color-18.u-gallery-nav:hover,
+        .u-popupmenu-items.u-text-hover-custom-color-18 .u-nav-link:hover,
+        .u-popupmenu-items.u-popupmenu-items.u-text-active-custom-color-18 .u-nav-link.active,
+        .u-calendar-time-list .u-calendar-time-slot.u-text-hover-custom-color-18:hover,
+        .u-calendar-time-list .u-calendar-time-slot.u-text-active-custom-color-18.u-active
+        {
+            color: rgba(147,218,229,0.8901960784313725) !important;
+        }
+
+        .u-text-custom-color-18 .u-svg-link,
+        .u-text-hover-custom-color-18:hover .u-svg-link,
+        .u-text-hover-custom-color-18:focus .u-svg-link,
+        .u-text-active-custom-color-18:active .u-svg-link.u-svg-link,
+        .u-button-style:hover > .u-text-hover-custom-color-18 .u-svg-link,
+        .u-button-style.u-button-style:active > .u-text-active-custom-color-18 .u-svg-link,
+        .u-button-style.u-button-style.active > .u-text-active-custom-color-18 .u-svg-link
+        {
+            fill: rgba(147,218,229,0.8901960784313725);
+        }
+
+        .u-link.u-text-custom-color-18:hover
+        {
+            color: rgba(117,208,222,0.8901960784313725) !important;
+        }
+
+        a.u-link.u-text-hover-custom-color-18:hover
         {
             color: rgba(147,218,229,0.8901960784313725) !important;
         }
